linux (3.2.20-2) UNRELEASED; urgency=low

  [ Ben Hutchings ]
  * [ia64,powerpc] udeb: Add crc-itu-t to crc-modules; make
    firewire-core-modules depend on it (fixes FTBFS)
  * [arm,m68k,sh4] udeb: Build ipv6-modules
  * ethtool: allow ETHTOOL_GSSET_INFO for users
  
  [ Aurelien Jarno ]
  * [mips,mipsel] udeb: Remove rivafb and nvidiafb.
  * [ppc64]: add udebs, based on powerpc/powerpc64.

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 12 Jun 2012 06:21:34 +0100

linux (3.2.20-1) unstable; urgency=low

  * The "Confused? You Won't Be" release

  * New upstream stable update:
    http://www.kernel.org/pub/linux/kernel/v3.x/ChangeLog-3.2.20
   - cifs: fix oops while traversing open file list (try #4)
   - mm/fork: fix overflow in vma length when copying mmap on clone
   - mm: fix faulty initialization in vmalloc_init()
   - x86, amd, xen: Avoid NULL pointer paravirt references
   - ext4: force ro mount if ext4_setup_super() fails
   - ext4: disallow hard-linked directory in ext4_lookup
   - ext4: add missing save_error_info() to ext4_error()
   - ALSA: usb-audio: fix rate_list memory leak
   - Bluetooth: btusb: typo in Broadcom SoftSailing id (Closes: #674565)
   - ipv4: Do not use dead fib_info entries.
   - ipv4: fix the rcu race between free_fib_info and ip_route_output_slow
   - l2tp: fix oops in L2TP IP sockets for connect() AF_UNSPEC case
   - btree: fix tree corruption in btree_get_prev()
   - asix: allow full size 8021Q frames to be received (Closes: #676545)
   - ext4: don't trash state flags in EXT4_IOC_SETFLAGS
   - ext4: fix the free blocks calculation for ext3 file systems w/ uninit_bg

  [ Ben Hutchings ]
  * Rename source package to 'linux' (Closes: #636010)
  * Convert source package format to 3.0 (quilt)
    - Convert patch system to quilt, except for the 'orig' patch series
    - Use xz compression for upstream and Debian tarballs
    - README.source: Update description of patch system to match current
      usage