@@ -32,10 +32,18 @@ $(STAMPS_DIR)/setup-base: $(STAMPS_DIR)/source-base
 	$(MAKE) -f debian/rules.gen setup_$(DEB_HOST_ARCH)
 	@$(stamp)
 
-build: debian/control $(STAMPS_DIR)/build-base
-$(STAMPS_DIR)/build-base: $(STAMPS_DIR)/setup-base
+build: build-arch build-indep
+
+build-arch: debian/control $(STAMPS_DIR)/build-arch-base
+$(STAMPS_DIR)/build-arch-base: $(STAMPS_DIR)/setup-base
 	dh_testdir
-	$(MAKE) -f debian/rules.gen build_$(DEB_HOST_ARCH)
+	$(MAKE) -f debian/rules.gen build-arch_$(DEB_HOST_ARCH)
+	@$(stamp)
+
+build-indep: debian/control $(STAMPS_DIR)/build-indep-base
+$(STAMPS_DIR)/build-indep-base: $(STAMPS_DIR)/setup-base
+	dh_testdir
+	$(MAKE) -f debian/rules.gen build-indep
 	@$(stamp)
 
 DIR_ORIG = ../orig/$(SOURCE)-$(VERSION_UPSTREAM)
@@ -63,11 +71,11 @@ clean: debian/control
 	rm -rf $(BUILD_DIR) $(STAMPS_DIR) debian/lib/python/debian_linux/*.pyc debian/linux-headers-* debian/linux-image-* debian/linux-support-* debian/linux-source-* debian/linux-doc-* debian/linux-manual-* debian/xen-linux-system-* debian/*-modules-*-di*
 	dh_clean
 
-binary-indep: $(STAMPS_DIR)/source-base
+binary-indep: $(STAMPS_DIR)/build-indep-base
 	dh_testdir
 	$(MAKE) -f debian/rules.gen binary-indep
 
-binary-arch: $(STAMPS_DIR)/build-base
+binary-arch: $(STAMPS_DIR)/build-arch-base
 	dh_testdir
 	$(MAKE) -f debian/rules.gen binary-arch_$(DEB_HOST_ARCH)
 
