@@ -51,7 +51,8 @@ binary-indep: install-manual
 binary-indep: install-source
 binary-indep: install-support
 
-build: $(STAMPS_DIR)/build_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_$(TYPE)
+build-arch: $(STAMPS_DIR)/build_$(ARCH)_$(FEATURESET)_$(FLAVOUR)_$(TYPE)
+build-indep: $(STAMPS_DIR)/build-doc
 
 setup-flavour: $(STAMPS_DIR)/setup_$(ARCH)_$(FEATURESET)_$(FLAVOUR)
 
