@@ -10,6 +10,9 @@ linux (3.2.20-2) UNRELEASED; urgency=low
   * [mips,mipsel] udeb: Remove rivafb and nvidiafb.
   * [ppc64]: add udebs, based on powerpc/powerpc64.
 
+  [ Bastian Blank ]
+  * Support build-arch and build-indep make targets.
+
  -- Ben Hutchings <ben@decadent.org.uk>  Tue, 12 Jun 2012 06:21:34 +0100
 
 linux (3.2.20-1) unstable; urgency=low
